--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,3 +6,15 @@ body {
 .w-40p {
     width: 40%;
 }
+
+.header-font-size {
+    font-size: 2.5vmax;
+}
+
+.label-font-size {
+    font-size: 1.75vmax;
+}
+
+.content-font-size {
+    font-size: 2vmax;
+}
