--- a/frontend/src/character-sheet/character-sheet.css
+++ b/frontend/src/character-sheet/character-sheet.css
@@ -18,7 +18,6 @@
 
 .character-sheet table thead tr th {
     text-align: center;
-    font-size: 2.5vmax;
 }
 
 .character-sheet table thead tr th, .character-sheet table tbody tr td {
@@ -28,12 +27,11 @@
 .character-sheet table tbody tr td div {
     display: flex;
     justify-content: space-between;
-    align-items: center;;
+    align-items: center;
 }
 
 .character-sheet table tbody tr td div label {
     flex-shrink: 0;
-    font-size: 1.75vmax;
     margin: unset;
 }
 
@@ -44,6 +42,5 @@
     outline: none;
     flex-grow: 2;
     flex-shrink: 6;
-    font-size: 2vmax;
     min-width: 0;
 }
