--- a/frontend/src/character-sheet/character-sheet.css
+++ b/frontend/src/character-sheet/character-sheet.css
@@ -1,46 +1,33 @@
 #wfrp-logo-container img {
-    width: 100%;
-    min-width: 450px;
-}
+  width: 100%;
+  min-width: 450px; }
 
 .character-sheet table {
-    min-width: 450px;
-    width: 100%;
-    border: 1px solid black;
-    margin: 7px 0;
-}
-
-.character-sheet table thead tr {
+  min-width: 450px;
+  width: 100%;
+  border: 1px solid black;
+  margin: 7px 0; }
+  .character-sheet table thead tr {
     background-color: black;
     color: white;
-    text-transform: uppercase;
-}
-
-.character-sheet table thead tr th {
-    text-align: center;
-}
-
-.character-sheet table thead tr th, .character-sheet table tbody tr td {
-    border: 1px solid black;
-}
-
-.character-sheet table tbody tr td div {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.character-sheet table tbody tr td div label {
-    flex-shrink: 0;
-    margin: unset;
-}
-
-.character-sheet table tbody tr td input[type=text], .character-sheet table tbody tr td input[type=number] {
-    border: none;
-    border-bottom: 1px solid gray;
-    margin: 0 5px;
-    outline: none;
-    flex-grow: 2;
-    flex-shrink: 6;
-    min-width: 0;
-}
+    text-transform: uppercase; }
+    .character-sheet table thead tr th {
+      text-align: center;
+      border: 1px solid black; }
+  .character-sheet table tbody tr td {
+    border: 1px solid black; }
+    .character-sheet table tbody tr td div {
+      display: flex;
+      justify-content: space-between;
+      align-items: center; }
+      .character-sheet table tbody tr td div label {
+        flex-shrink: 0;
+        margin: unset; }
+    .character-sheet table tbody tr td input[type=text], .character-sheet table tbody tr td input[type=number] {
+      border: none;
+      border-bottom: 1px solid gray;
+      margin: 0 5px;
+      outline: none;
+      flex-grow: 2;
+      flex-shrink: 6;
+      min-width: 0; }
