[31] added weapons table and some general improvements to the code. Changed how pasted character data is handled so that now various classes are created properly

--- a/frontend/src/character-sheet/character-profile/character-stats-table/character-stats-table.scss
+++ b/frontend/src/character-sheet/character-profile/character-stats-table/character-stats-table.scss
@@ -1,25 +1,28 @@
-#character-profile {
-  .character-stats-table, .character-stats-table * {
-    border: none;
-  }
-  .character-stats-table {
-    text-align: center;
-    thead {
-      tr {
-        background-color: white;
-        color: black;
-        th:first-child {
-          text-align: left;
-        }
+.character-stats-table {
+  width: 100%;
+  border: none;
+  text-align: center;
+  thead {
+    tr {
+      background-color: white;
+      color: black;
+      th:first-child {
+        text-align: left;
       }
     }
-    tbody {
-      tr {
-        td:first-child {
-          text-align: right;
-        }
-        td:not(:first-child) {
-          border: 1px solid black;
+  }
+  tbody {
+    tr {
+      td:first-child {
+        text-align: right;
+      }
+      td:not(:first-child) {
+        border: 1px solid black;
+        input {
+          padding-left: 15px;
+          width: 100%;
+          border: none;
+          text-align: center;
         }
       }
     }
