--- a/frontend/src/character-sheet/character-profile/character-stats-table/character-stats-table.css
+++ b/frontend/src/character-sheet/character-profile/character-stats-table/character-stats-table.css
@@ -1,14 +1,18 @@
-#character-profile .character-stats-table, #character-profile .character-stats-table * {
-  border: none; }
-
-#character-profile .character-stats-table {
+.character-stats-table {
+  width: 100%;
+  border: none;
   text-align: center; }
-  #character-profile .character-stats-table thead tr {
+  .character-stats-table thead tr {
     background-color: white;
     color: black; }
-    #character-profile .character-stats-table thead tr th:first-child {
+    .character-stats-table thead tr th:first-child {
       text-align: left; }
-  #character-profile .character-stats-table tbody tr td:first-child {
+  .character-stats-table tbody tr td:first-child {
     text-align: right; }
-  #character-profile .character-stats-table tbody tr td:not(:first-child) {
+  .character-stats-table tbody tr td:not(:first-child) {
     border: 1px solid black; }
+    .character-stats-table tbody tr td:not(:first-child) input {
+      padding-left: 15px;
+      width: 100%;
+      border: none;
+      text-align: center; }
