[31] Added removing weapon rows

--- a/frontend/src/character-sheet/Weapons.scss
+++ b/frontend/src/character-sheet/Weapons.scss
@@ -21,6 +21,9 @@
         }
       }
       tr {
+        &.clickable:hover {
+          background-color: black;
+        }
         td {
           input {
             width: 100%;
