--- a/frontend/src/character-sheet/Weapons.scss
+++ b/frontend/src/character-sheet/Weapons.scss
@@ -22,7 +22,10 @@
       }
       tr {
         &.clickable:hover {
-          background-color: black;
+          td {
+            border-top: 2px solid black;
+            border-bottom: 2px solid black;
+          }
         }
         td {
           input {
